umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0039_[N_1]([H_2])([H_3])[_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidBracket
    message: Invalid bracket at position 32
opensmiles:
  success: false
  error:
    error_type: InvalidBracket
    message: Invalid bracket at position 32
