umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0040_[N+0;H3_1].[C_3](=[O_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidBracket
    message: Invalid bracket at position 4
opensmiles:
  success: false
  error:
    error_type: InvalidBracket
    message: Invalid bracket at position 4
